--- a/newsblogger/style.css
+++ b/newsblogger/style.css
@@ -6,7 +6,7 @@ Author URI: https://spicethemes.com
 Description: NewsBlogger is a dynamic and versatile child theme for the popular NewCrunch WordPress theme. Perfect for bloggers, journalists, and online magazines, it offers enhanced customization options, improved performance, and seamless integration with both the Gutenberg and Classic editors. Compatible to various popular plugins such as Elementor, Contact Form 7, Polylang and WPML. Theme is RTL ready and prioritizes user privacy and complies with the General Data Protection Regulation (GDPR) guidelines by refraining from collecting any personal data restricted under GDPR. The theme is also schema-ready, enhancing search engine visibility and optimization. To explore the theme further, feel free to check out our demo at: https://demo-news.spicethemes.com/startersite-1/. For video tutorial visit here https://www.youtube.com/playlist?list=PLTfjrb24Pq_DeJOZdKEaP3rZPbHuOCLtZ
 Template: newscrunch
 Tags: blog, news, photography, custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready, rtl-language-support, one-column, two-columns, full-width-template, sticky-post, right-sidebar, footer-widgets, grid-layout
-Version: 0.1.7.5
+Version: 0.2
 Requires at least: 4.5
 Tested up to: 6.7
 Requires PHP: 5.6
@@ -18,7 +18,7 @@ Text Domain: newsblogger
 body, button, input, select, textarea {	font-family: "Jost"; }
 blockquote { font-family: "Jost"; color: #525252; font-weight: 700; padding: 20px 25px; }
 p { color: #525252; }
- .newsblogger ol li, .newsblogger ul li:not(.spnc-topbar ul li) { font-size: 1.125rem; color: #525252; }
+ .newsblogger ol li, .newsblogger ul li:not(.spnc-topbar ul li,.order_details li) { font-size: 1.125rem; color: #525252; }
 /* ----- Header 12 CSS ----- */
 .spnc-home .header-sidebar.header-12 {  position: relative;  margin: 0 0 20px 0; }
 .header-12 .custom-social-icons li { padding: 0.3rem 0.125rem 0.3rem; }
@@ -409,3 +409,80 @@ img.alignright,.wp-caption.alignright {margin-left: 1.875rem;float: right;}
   margin: 0;
   padding: 0.5rem;
 }
+
+/* Woocommerce css */
+.newsblogger.woocommerce ul.products li.product .onsale {border-radius: 18px;padding: 4px 12px;}
+.newsblogger.woocommerce ul.products li.product a .spnc-wc-overlay {border-radius: 10px;margin-bottom: 10px;overflow: hidden;}
+.newsblogger.woocommerce-page.woocommerce-cart #content .actions #coupon_code {font-size: 1rem;line-height: 1.4;border: 1px solid #d7d7d7;padding: 10px 20px;}
+.newsblogger.woocommerce-cart.woocommerce-page ins.sale-price {background: transparent;}
+.newsblogger.woocommerce-cart.woocommerce-page ins.sale-price .woocommerce-Price-amount.amount {background: unset;padding-left: 5px;}
+.newsblogger.woocommerce-cart .actions .newscrunch-btn.btn-text-1,
+.newsblogger form.search-form input.search-submit,
+.newsblogger input[type="submit"],
+.newsblogger button[type="submit"] {border-radius: unset;}
+.newsblogger.woocommerce-page.woocommerce-cart button[name="apply_coupon"] {padding: 15px 34px}
+.newsblogger.woocommerce-cart .product:hover .spnc-wc-overlay::after {content: "";position: absolute;top: 0;left: 0;width: 100%;height: 100%;background-color: #000;opacity: .2;}
+.newsblogger.woocommerce-cart ul.products li.product a .spnc-wc-overlay {border-radius: 10px;margin-bottom: 10px;overflow: hidden;position: relative;}
+.newsblogger.woocommerce.single-product .related.products>h2,
+.newsblogger.woocommerce-page .cart-collaterals .cross-sells>h2,
+.newsblogger.woocommerce-page .cart-collaterals .cart_totals>h2 {position: relative;border-top-left-radius: 10px;border-top-right-radius: 10px;font-weight: 700;width: fit-content;letter-spacing: 2px;}
+.newsblogger.woocommerce.single-product .related.products>h2::after,
+.newsblogger.woocommerce-page .cart-collaterals .cross-sells>h2::after,
+.newsblogger.woocommerce-page .cart-collaterals .cart_totals>h2::after {content: "";position: absolute;bottom: 0;left: 0;width: 250vh;}
+.newsblogger.woocommerce-cart .page-section-full {padding: 0 0 1.25rem;}
+.newsblogger.woocommerce-checkout .wp-block-woocommerce-checkout-order-summary-coupon-form-block {padding: 10px 16px;}
+.newsblogger.woocommerce-checkout .wp-block-woocommerce-checkout-order-summary-totals-block {padding-block: 10px;}
+.newsblogger.woocommerce-checkout .wc-block-checkout__sidebar .wc-block-components-totals-footer-item {padding-top: 10px;}
+.newsblogger.woocommerce.single-product .product_meta .posted_in a {padding-left: 5px;}
+.newsblogger.woocommerce.single-product .product_meta .posted_in a:first-child {padding-left: 23px;}
+.newsblogger.woocommerce-page .quantity input[type="number"],
+.woocommerce-page .quantity button {padding: 0.8rem;}
+.newsblogger.woocommerce-page .quantity input[type="number"],
+.newsblogger.woocommerce-page .quantity button {width: 2.15em;padding: 0.8rem 0.5rem;}
+.newsblogger.woocommerce-page .quantity input[type="number"]{width: 3.15em;}
+.newsblogger.woocommerce.single-product div.product form.cart .button {padding: 14px 38px;}
+.newsblogger.woocommerce #review_form #respond .form-submit input {color: #ffffff;border-radius: unset;}
+.newsblogger.woocommerce-cart .actions .newscrunch-btn.btn-text-1 {display: inline-block;margin-bottom: 10px;}
+.newsblogger.woocommerce.single-product .related.products>h2 {}
+.widget_shopping_cart .widget_shopping_cart_content {display: flex;flex-direction: column;}
+.widget_shopping_cart .widget_shopping_cart_content .spnc-mini-cart-summary {order: 3;border-top: 1px solid #d7d7d7;padding-top: 14px;padding-bottom: 14px;margin-bottom: 20px;}
+.newsblogger .widget_shopping_cart .widget_shopping_cart_content .woocommerce-mini-cart__buttons {order: 4;gap: 0;}
+.newsblogger .widget_shopping_cart .widget_shopping_cart_content .woocommerce-mini-cart .woocommerce-mini-cart-item a:not(.remove_from_cart_button, .product-image, .product-title) {display: none;}
+.newsblogger.woocommerce .widget_shopping_cart .cart_list li,
+.woocommerce.widget_shopping_cart .cart_list li {padding: 10px 0 10px 5px;}
+.newsblogger .spnc-sidebar .woocommerce ul.product_list_widget li img {width: 4.375rem;aspect-ratio: 1;border-radius: 6px;object-fit: cover;margin-right: 0.813rem;}
+.newsblogger.woocommerce .widget_shopping_cart .cart_list li a.remove,
+.woocommerce.widget_shopping_cart .cart_list li a.remove {font-size: 20px;color: #ffffff !important;background: #000;line-height: 1;padding-bottom: 3px;padding-left: 1px;display: grid;place-content: center;}
+.newsblogger .widget_shopping_cart .widget_shopping_cart_content .woocommerce-mini-cart__buttons .button {flex: 1;text-align: center;border-radius: unset;margin-bottom: 10px;margin-right: 0;}
+.newsblogger .widget_shopping_cart .widget_shopping_cart_content .woocommerce-mini-cart__buttons .button:first-child {margin-right: 20px;}
+.newsblogger.woocommerce .spnc-sidebar .spnc-title-price-wrap .product-title {margin-bottom: 5px;}
+.newsblogger .spnc-mini-cart-summary .spnc-cart-subtotal .woocommerce-Price-amount {font-weight: 700;}
+.newsblogger .widget_shopping_cart .widget_shopping_cart_content .woocommerce-mini-cart__buttons .button {color: #000000;background-color: #eeeef5;}
+.newsblogger.woocommerce .product_list_widget .product-title {margin-bottom: 5px;display: block;}
+.newsblogger .wp-block-woocommerce-product-categories.wc-block-product-categories {margin-bottom: 0;}
+.newsblogger .wp-block-woocommerce-product-categories .wc-block-product-categories-list li {border-bottom: 1px solid #d7d7d7;padding-block: 10px;}
+.newsblogger .wp-block-woocommerce-product-categories .wc-block-product-categories-list>li:last-child {border-bottom: 0;}
+.newsblogger .wp-block-woocommerce-product-categories .wc-block-product-categories-list li:has(ul) {padding-bottom: 0;}
+.newsblogger .wp-block-woocommerce-product-categories .wc-block-product-categories-list li>ul {border-top: 1px solid #d7d7d7;padding-top: 0;margin-top: 10px;margin-bottom: 0;}
+.newsblogger .wc-block-product-categories-list li>ul li:last-child {border-bottom: none;}
+.newsblogger :is(.widget_recently_viewed_products, .widget_top_rated_products, .widget_products) .product_list_widget li {border-bottom: 1px solid #d7d7d7;padding-block: 20px;}
+.newsblogger :is(.widget_recently_viewed_products, .widget_top_rated_products, .widget_products) .product_list_widget li:first-child {padding-top: 5px;}
+.newsblogger :is(.widget_recently_viewed_products, .widget_top_rated_products, .widget_products) .product_list_widget li:last-child {border-bottom: none;padding-bottom: 0;}
+.newsblogger :is(.widget_recently_viewed_products, .widget_top_rated_products, .widget_products) .product_list_widget li .star-rating {font-size: 14px;margin-bottom: 6px;}
+.newsblogger .widget.widget_block:has(.wp-block-woocommerce-product-categories) {padding-bottom: 5px;}
+.newsblogger .widget.widget_block .wp-block-woocommerce-rating-filter .wc-block-rating-filter-list li::before,
+.newsblogger .widget.widget_block .wp-block-woocommerce-stock-filter .wc-block-stock-filter-list li::before,
+.newsblogger .widget.widget_block .wp-block-woocommerce-active-filters .wc-block-active-filters__list li::before,
+.newsblogger .widget.widget_block .wp-block-woocommerce-attribute-filter .wc-block-attribute-filter-list li::before {content: unset;}
+.newsblogger .widget.widget_block .wp-block-woocommerce-rating-filter .wc-block-rating-filter-list {margin-left: 0;}
+.newsblogger .widget.widget_block .wp-block-woocommerce-rating-filter,
+.newsblogger .widget.widget_block .wc-block-price-filter {margin: 0;}
+.newsblogger .widget.widget_block .wc-block-price-filter .wc-block-components-filter-reset-button,
+.newsblogger .widget.widget_block .wp-block-woocommerce-attribute-filter .wc-block-components-filter-reset-button,
+.newsblogger .widget.widget_block .wp-block-woocommerce-stock-filter .wc-block-components-filter-reset-button,
+.newsblogger .widget.widget_block .wc-block-active-filters .wc-block-active-filters__clear-all,
+.newsblogger .widget.widget_block .wp-block-woocommerce-rating-filter .wc-block-components-filter-reset-button {color: #000000;background-color: #eeeef5;padding: 10px 20px;font-size: 16px;line-height: 1;border: none;text-decoration: none;}
+.newsblogger.woocommerce-cart .spnc-entry-content .cart-collaterals .cart_totals,
+.newsblogger .widget.widget_block .wc-blocks-filter-wrapper {overflow: hidden;}
+.newsblogger .widget.widget_block .wp-block-woocommerce-price-filter {padding-inline: 2px;}
+.newsblogger button.woocommerce-form-login__submit {color: #ffffff;}
