--- a/newsblogger/assets/css/default.css
+++ b/newsblogger/assets/css/default.css
@@ -213,3 +213,12 @@ body.newsblogger.woocommerce-page a.button.wc-forward:hover{background-color: #3
 body.newsblogger.woocommerce-page .woocommerce-message::before {
     color: #369ef6;
 }
+.newsblogger .wp-block-woocommerce-product-template li:hover .wp-block-button.wc-block-components-product-button .wc-block-components-product-button__button{
+    background-color:#369ef6;
+    color:#ffffff;
+    border:1px solid #369ef6;
+}
+.newsblogger .wp-block-woocommerce-product-template .wp-block-button.wc-block-components-product-button .added_to_cart{
+    background-color: #369ef6;
+    color: #fff;
+}
